tests/negative/Test9.sp
(* Wrong type of variable *)
pi:Double = "a";